--- a/front-end/==.md
+++ b/front-end/==.md
@@ -38,3 +38,8 @@ true == 3 // return false
 
 如果是一个`boolean`类型和一个`number`类型比较,他会把`boolean`转换成`number`之后再去比较.
 我们知道`true == 1` && `false == 0`. 所以`true == 3`变成了 `1 == 3`,显然是错误的.
+
+可是为什么`if(3){console.log(true)}`这样却是可以的呢?
+
+因为在一个`boolean`上下文环境中,会对`value`做`boolean`的类型转换.我们知道,有几种情况是`false`
+`+0,-0, null, undefined, NaN, ''`
