--- a/front-end/==.md
+++ b/front-end/==.md
@@ -32,7 +32,7 @@ true == 3 // return false
 
 这个还是得说说`==`的对比.我们知道他是强制类型转换,可是他是怎么转换的.
 
-上面有说到 > `==`会检查类型,如果类型不同会做类型转换,那是如何转换.
+上面有说到 `==`会检查类型,如果类型不同会做类型转换,那是如何转换.
 
 其实[你看标准里说的](http://www.ecma-international.org/ecma-262/#sec-abstract-equality-comparison),就知道了.
 
