Update and rename 递归.md to 递归及去重.md

--- a/front-end/递归及去重.md
+++ b/front-end/递归及去重.md
@@ -33,3 +33,18 @@ export const parseChildren = (array, result=[], ids=[]) => {
 可以发现,也就是在`push`的时候加上了判断,判断是否`push`过这个`item`,没有就再`push`.
 
 有心人会发现,判断重复是通过`includes`来处理的.`includes`采用的是`SameValueZero`策略来判断相等的.可以满足绝大多数场景
+
+`includes`和`===`的区别就是对应`NaN`的判断.
+
+严格相等(`Strict Equality Comparison `)判断的`NaN`,是不相等的.
+
+```javascript
+`NaN === NaN`  // false
+`[NaN].indexOf(NaN)` // -1
+```
+`indexOf`判断的策略也是`Strict Equality Comparison`,所以这里返回了`-1`
+
+但是`includes`却是可以的.
+`[NaN].includes(NaN) //true`.
+
+类似`includes`的这种策略(`SameValueZero`)的还有`Map, Set`等.
