--- a/front-end/javascript/执行上下文.md
+++ b/front-end/javascript/执行上下文.md
@@ -82,6 +82,8 @@ executionContextObj = {
 4. 激活/执行阶段
   - 在上下文中运行/解释函数，并在代码逐行执行时分配变量值。
   
+> 在上面的VO的时候可以发现，函数是被特殊照顾了, 先于变量的处理，所以为啥在变量提升的时候，函数被提到函数顶部了，所以，函数是第一等公民，哈哈
+  
 下面来看一个例子:
 ```javascript
 function foo(i) {
