--- a/front-end/javascript/执行上下文.md
+++ b/front-end/javascript/执行上下文.md
@@ -1,3 +1,5 @@
+[原文 What is the Execution Context & Stack in JavaScript?](http://davidshariff.com/blog/what-is-the-execution-context-in-javascript/)
+
 我们通过[引擎执行知道代码执行走向](https://github.com/xiaohesong/TIL/blob/master/front-end/javascript/js-engine-work.md),但是他具体是怎么执行的呢
 
 这就要从他的执行上下文(execution context)来说起来。
