--- a/front-end/javascript/执行上下文.md
+++ b/front-end/javascript/执行上下文.md
@@ -168,3 +168,8 @@ fooExecutionContext = {
 - 为什么`bar`是`undefined`
 
 因为在`AO`的过程，对于变量 是需要初始化为`undefined`存在`VO`里。
+
+不错的外链:
+- [Javascript Closures](http://jibbering.com/faq/notes/closures/#clIRExSc)
+- [Identifier Resolution and Closures in the JavaScript Scope Chain](http://davidshariff.com/blog/javascript-scope-chain-and-closures/)
+- [I never understood JavaScript closures 由此文引发针对context的学习](https://medium.com/dailyjs/i-never-understood-javascript-closures-9663703368e8)
