--- a/front-end/javascript/执行上下文.md
+++ b/front-end/javascript/执行上下文.md
@@ -159,7 +159,7 @@ fooExecutionContext = {
 
 - 为什么我们可以在申明`foo`之前访问到他？
 
-很简单，在代码执行阶段(Activation / Code Execution Stage)，我们已经过了创建阶段的`VO`过程，这时候是`undefined`.
+很简单，在代码执行阶段(Activation / Code Execution Stage)，我们已经过了创建阶段的`VO`过程，这时候是`function`.
 
 - 为什么`foo`被声明了两次，显示的是function，却不是undefined或者string
 
