添加作用域的用例

--- a/front-end/javascript/执行上下文.md
+++ b/front-end/javascript/执行上下文.md
@@ -173,3 +173,42 @@ fooExecutionContext = {
 - [Javascript Closures](http://jibbering.com/faq/notes/closures/#clIRExSc)
 - [Identifier Resolution and Closures in the JavaScript Scope Chain](http://davidshariff.com/blog/javascript-scope-chain-and-closures/)
 - [I never understood JavaScript closures 由此文引发针对context的学习](https://medium.com/dailyjs/i-never-understood-javascript-closures-9663703368e8)
+
+
+#### 一些例子
+
+发现有人问了一些问题，特此来解释下：
+
+example1:
+
+```js
+function run() {
+  foo() //1
+  if(true){
+    function foo() {console.log('true')}
+  } else{
+    function foo() {console.log('false')}
+  }
+  foo() //2
+}
+run()
+```
+
+执行上面代码会发现`1`处报错，`2`处是`true`. 因为在代码解释阶段，是没有去解释块里的内容的，所以在当前的vo里不存在foo,会报错。`2`打印true,是在代码执行阶段再去处理.
+
+example2:
+
+```js
+function run() {
+  console.log(a) //1 -> function point
+  console.log(a()) // 3
+  var a = 'var a'
+  function a() {return 'func a'}
+  console.log(a) //2 -> var a
+  console.log(a()) //4
+}
+run()
+```
+可以发现，`1`处打印的是一个`function`指向，因为执行vo,函数声明优先于变量。`2`处打印的是个变量.因为在解释阶段是指向函数声明，但是在执行阶段，重新指向了变量。你可能会想，为啥第一行执行没有被覆盖，第二行执行被覆盖了。因为第一行执行的时候，**就是变量提升**，那时候按照vo的规则，变量声明的时候存在了function指向的名称，所以不会被重新定义。第二行执行的时候就**不是变提升**了，按照执行流程来，function在解释的时候就被提升到顶部了，在执行的时候不会再执行函数声明只会执行赋值`a = 'var a'`.
+
+看`3`和`4`标注的行，`3`是输出`func a`, `4`是报错，就是因为在执行的时候经过了`a = var 'a'`的赋值。这个时候更新了`a`。
