--- a/front-end/javascript/执行上下文.md
+++ b/front-end/javascript/执行上下文.md
@@ -63,8 +63,7 @@ executionContextObj = {
 
 ##### Activation / Variable Object [AO/VO]
 上面的`executionContextObj`是在调用函数并且真正的执行函数之前创建的，也就是在`Creation Stage`创建的。
-这里解释器会扫描传入的参数和内部的变量声明以及函数声明，最终的结果是在`executionContextObj`中生成`variableObject`.生成 `VO`(variableObject)的过程
-需要经过`AO`(activation object)阶段。
+这里解释器会扫描传入的参数和内部的变量声明以及函数声明，最终的结果是在`executionContextObj`中生成`variableObject`.
 
 简单的来概述下解释器是怎么来处理的.
 
