--- a/front-end/javascript/engines/优化原型.md
+++ b/front-end/javascript/engines/优化原型.md
@@ -1,3 +1,5 @@
+> 本文原文： [JavaScript engine fundamentals: optimizing prototypes](https://benediktmeurer.de/2018/08/16/javascript-engine-fundamentals-optimizing-prototypes/)
+
 本文介绍了所有JavaScript引擎通用的一些关键基础原理 - 而不仅仅是作者([Benedikt](https://twitter.com/bmeurer)和[Mathias](https://twitter.com/mathias))所使用的[V8](https://twitter.com/v8js)引擎。作为JavaScript开发人员，深入了解JavaScript引擎的工作原理可以帮助你了解代码的性能特征。
 
 [之前](https://github.com/xiaohesong/TIL/blob/master/front-end/javascript/engines/shape%E5%92%8Cinline-cache.md)，我们讨论了JavaScript引擎如何通过使用Shapes和Inline Caches来优化对象和数组访问。本文解释了优化管道的权衡，并描述了引擎如何加速对原型属性的访问。
