--- a/front-end/javascript/engines/优化原型.md
+++ b/front-end/javascript/engines/优化原型.md
@@ -6,7 +6,7 @@
 
 **注意：** 如果你更喜欢观看演示文稿而不是阅读文章，那么请欣赏下面的视频！如果不是，请跳过视频并继续阅读。
 
-<iframe width="720" height="405" src="https://www.youtube.com/embed/IFWulQnM5E0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+[![点击观看](https://i.ytimg.com/vi_webp/IFWulQnM5E0/maxresdefault.webp)](https://youtu.be/IFWulQnM5E0)
 
 ## 优化层和执行权衡(trade-offs)
 
