add refrence for event

--- a/front-end/react/events/合成事件概述.md
+++ b/front-end/react/events/合成事件概述.md
@@ -123,3 +123,5 @@ function onClick(event) {
 ##### 参考：
 
 - [Getting to know React DOM’s event handling system inside out](https://medium.com/the-guild/getting-to-know-react-doms-event-handling-system-inside-out-378c44d2a5d0)
+- [The React and React Native Event System Explained: A Harmonious Coexistence](https://levelup.gitconnected.com/how-exactly-does-react-handles-events-71e8b5e359f2)
+- [Mixing React and DOM events](https://fortes.com/2018/react-and-dom-events/)
