--- a/front-end/dom/自定义表单验证.md
+++ b/front-end/dom/自定义表单验证.md
@@ -555,3 +555,5 @@ document.addEventListener('submit', function (event) {
 
 来啊，再来看看在线的[现成](https://codepen.io/cferdinandi/embed/eRppxO?height=531&theme-id=1&slug-hash=eRppxO&default-tab=js%2Cresult&user=cferdinandi&embed-version=2&pen-title=Form%20Validation%3A%20Validate%20on%20Submit&name=cp_embed_8)版本
 
+
+原文：[Form Validation Part 2: The Constraint Validation API (JavaScript)](https://css-tricks.com/form-validation-part-2-constraint-validation-api-javascript/)
