add name useCapture

--- a/front-end/javascript/events/事件冒泡和捕获.md
+++ b/front-end/javascript/events/事件冒泡和捕获.md
@@ -18,7 +18,7 @@
 
 ### 事件捕获
 
-事件捕获和事件冒泡是不同的，捕获是从上而下。如果需要捕获事件，那就需要将`addEventListener`的第三个参数设置成`true`.
+事件捕获和事件冒泡是不同的，捕获是从上而下。如果需要捕获事件，那就需要将`addEventListener`的第三个参数(叫做`useCapture`)设置成`true`.
 
 默认的`false`是在冒泡阶段处理事件，`true`就是捕获阶段处理事件。看下面的代码：
 
