--- a/front-end/javascript/events/定义事件.md
+++ b/front-end/javascript/events/定义事件.md
@@ -38,7 +38,7 @@ function eventHandler(e) {
 老的创建事件的方法是受Java启发产生的API。下面是一个例子:
 
 ```js
-// 创建一个事件，注意：`Event`这个参数是写死的.
+// 创建一个事件，注意：`Event`这个参数是.
 var event = document.createEvent('Event');
 
 // 定义事件的名字是 'build'.
@@ -54,9 +54,20 @@ elem.dispatchEvent(event);
 ```
 可以发现，比较啰嗦，但是如果你要做兼容，似乎只能使用这个法子。
 
+值得说一下的是，上面创建的`event`对象，就是被创建的[`Event`](https://developer.mozilla.org/en-US/docs/Web/API/Event)对象。
+
+然后对应创建事件的类型，就是上面那个注意的`'Event'`参数。
+```js
+var event = document.createEvent(type);
+```
+`type`是表示要创建的事件类型，一个字符串。可能包含的有`"UIEvents"`,`"MouseEvents"`, `"MutationEvents"`, 和 `"HTMLEvents"`。
+
+
 ### 事件冒泡
 有时候我们使用事件冒泡法则来完成事件代理。
+
 来看一个小🌰：
+
 ```html
 <form>
   <textarea></textarea>
@@ -82,5 +93,58 @@ textarea.addEventListener('input', e => e.target.dispatchEvent(eventAwesome));
 
 ```
 
+这个小🌰完成下来，是不是感觉也很容易记住的。
+### 动态创建和分派事件
+
+元素可以监听还没有创建的事件，我们来一睹为快。
+
+```html
+<form>
+  <textarea></textarea>
+</form>
+```
+
+```js
+const form = document.querySelector('form');
+const textarea = document.querySelector('textarea');
+
+form.addEventListener('awesome', e => console.log(e.detail.text()));
+
+textarea.addEventListener('input', function() {
+  // 动态创建和调度/触发事件
+  // 注意:我们选择使用的是”函数表达式”(而不是“箭头函数表达式”)，因此“this”将可以表示此元素。
+  this.dispatchEvent(new CustomEvent('awesome', { bubbles: true, detail: { text: () => textarea.value } }))
+});
+```
+
+好吧，还是和之前差不多是不，只是把创建事件放在了`dispatchEvent`上面而已；
+
+### 触发内置事件
+
+来吧，直接看一个🌰，吃了它：
+
+```js
+function simulateClick() {
+  var event = new MouseEvent('click', {
+    view: window,
+    bubbles: true,
+    cancelable: true
+  });
+  var cb = document.getElementById('checkbox'); 
+  var cancelled = !cb.dispatchEvent(event);
+  if (cancelled) {
+    // A handler called preventDefault.
+    alert("cancelled");
+  } else {
+    // None of the handlers called preventDefault.
+    alert("not cancelled");
+  }
+}
+```
+
+> 小问：看到上面对于`CustomEvent`，也可以传递第二个参数，你有没有想过，他可不可以传递`detail`？试试呗？然后发现，不可以哦。好吧，如果你有这个疑问，那就说明你忘了仔细看上面说的`CustomEvent`上有个`detail`属性了。
+
 参考：
 > [CustomEvent interface](https://developer.mozilla.org/en-US/docs/Web/API/CustomEvent)
+>
+> [Creating and triggering events](https://developer.mozilla.org/en-US/docs/Web/Guide/Events/Creating_and_triggering_events#The_old-fashioned_way)
