--- a/front-end/stories/阻止事件冒泡.md
+++ b/front-end/stories/阻止事件冒泡.md
@@ -38,9 +38,9 @@ render() {
   
     这个事件发生在有`value`的元素上，
   
-  - `onchange`
+  - `onclick`
  
-      这个基本发生在每个可见的元素上。
+    这个基本发生在每个可见的元素上。
   
  还有一些其他的区别，比如触发的时机。
  
