add react conf 2019 video day2

--- a/front-end/react/conf/conf-2019.md
+++ b/front-end/react/conf/conf-2019.md
@@ -1,3 +1,5 @@
 本文是关于ReactConf2019的记录，先记录下对应的视频地址：
 
-- [react-conf-2019-youtube-video](https://www.youtube.com/watch?reload=9&v=RCiccdQObpo)
+- [react-conf-2019-youtube-video-day1](https://www.youtube.com/watch?reload=9&v=RCiccdQObpo)
+
+- [react-conf-2019-youtube-video-day2](https://www.youtube.com/watch?v=JDDxR1a15Yo)
